--- a/css/styles.css
+++ b/css/styles.css
@@ -174,24 +174,32 @@ section {
   /* <nav> address */
 .address-link{
     color:var(--color-p-text);
-    text-decoration: none;
-    font-family: "Roboto", sans-serif;
-    font-style: normal;
+    display: flex;
     font-weight: 500;
     font-size: 14px;
     line-height: 16px;
     letter-spacing: 0.02em;
     
 }
-.address-link:focus, .address-link:hover{
-    color:var(--color-link);
+.address-link:focus,
+.address-link:hover {
+    color: var(--color-link);
 }
 
-.mail-icon{
-      justify-content: center;
-  align-items: center;
-  fill: var(--primary-text-color);
-  margin-right: 10px;
+.address-link-icon:focus, 
+.address-link-icon:hover,
+.address-link:focus,
+.address-link:hover{
+    fill: var(--color-link);
+}
+
+
+.address-link-icon{
+    justify-content: center;
+    align-items: center;
+    margin-right: 10px;
+    color:var(--color-p-text)
+    
 }
 
    /* ------------------section-1 ------------------*/
@@ -200,7 +208,8 @@ section {
     text-align: center;
     padding-top: 200px;
     padding-bottom: 200px;
-    background-image: url(../images/bg-img.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/bg-img.jpg);
  
 }
   /* h1 section-1 */
@@ -237,7 +246,11 @@ section {
 
 
    /*---------------------- details------------------- */
-.menu-list{
+.icon-menu{
+    margin-bottom: 30px;
+}
+
+   .menu-list{
     padding-top: 94px;
 }
 
@@ -354,6 +367,18 @@ section {
 .team-name{
     padding: 30px;
 }
+
+.social-icons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:inherit;
+    border-radius: 50%;
+    box-sizing: border-box;
+}
+
+
+
      /* ---------------------Footer BG------------------- */
 .footer-bg{
     background-color: var(--color-sect-bg);
