--- a/css/styles.css
+++ b/css/styles.css
@@ -326,7 +326,7 @@ section {
 
 }
 .team{
-    background-color:#F5F4FA ;
+    background-color:#F5F4FA;
 }
 
 .team-list p{
@@ -366,18 +366,107 @@ section {
 
 .team-name{
     padding: 30px;
+    background-color:#FFFFFF;
 }
 
 .social-icons{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color:inherit;
-    border-radius: 50%;
-    box-sizing: border-box;
+  display: flex;
+  padding: 0 32px 20px;
+        
+}
+
+.social-icon-list:not(:last-child){
+    margin-right: 10px;
 }
 
 
+ .team-icon:hover {
+    fill: var(--color-link);
+} 
+
+.soc-link{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color:inherit;
+  border-radius: 50%;
+  box-sizing: border-box;
+  height: 44px;
+  width: 44px;   
+}
+
+.soc-link:hover, .soc-link:focus{
+    background-color: var(--color-link);
+}
+
+.soc-link:hover .team-icon ,
+.soc-link:focus .team-icon{
+  fill: #FFFFFF;
+}
+
+.team-icon{
+  width: 20px;
+  height: 20px;
+  fill: #AFB1B8;
+}
+.icon-links{
+    background-color: #FFFFFF;
+}
+
+
+/* ---------------------Partners------------------- */
+
+
+.client-section h2{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 1.2;
+    letter-spacing: 0.03em;
+    color: var(--color-h-text);
+    text-align: center;
+    margin-bottom: 50px;
+    
+}
+
+
+.partners{
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: -30px;
+    margin-left: -30px;
+}
+
+.partners li {
+    width: calc(100% / 6 - 30px);
+    margin-top: 30px;
+    margin-left: 30px;
+}
+
+.partners-list{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #FFFFFF;
+    border: 1px solid #AFB1B8;
+    box-sizing: border-box;
+    border-radius: 4px;
+    height: 90px;
+}
+
+.partner-icon{
+    display: flex;
+    fill: #AFB1B8;
+}
+
+.partners-list:focus, .partners-list:hover{
+    border: 1px solid var(--color-link);
+}
+
+.partners-list:hover .partner-icon,
+.partners-list:focus .partner-icon{
+    fill:var(--color-link);
+}
 
      /* ---------------------Footer BG------------------- */
 .footer-bg{
@@ -385,6 +474,10 @@ section {
     padding-top: 60px;
     padding-bottom: 60px;
 
+}
+
+.footer-bg .container{
+    display: flex;
 }
      /* Footer Logo */
 .web-footer{
@@ -453,9 +546,71 @@ section {
 }
 
 .mail-tel-menu {
-    margin-top: 9px;
+  margin-top: 9px;
 }
 
+.footer-social-links{
+  margin-left: 70px;
+  padding-top: 12px;
+
+}
+
+.footer-social-links p{
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  margin-bottom: 20px;
+  display: flex;
+
+}
+
+.footer-soc-link{
+    margin-bottom: 20px;
+}
+
+.foote-list{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+  box-sizing: border-box;
+  height: 44px;
+  width: 44px;
+}
+
+.footer-icon{
+  width: 20px;
+  height: 20px;
+  fill: #FFFFFF;
+}
+
+.footer-list{
+    display: flex;
+}
+
+.footer-links {
+    margin-right: 10px;
+}
+
+.footer-icon-list{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color : rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+    box-sizing: border-box;
+    height: 44px;
+    width: 44px;
+}
+
+.footer-icon-list:hover, .footer-icon-list:focus{
+    background-color: var(--color-link);
+}
 
 /*---------------------- portfolio------------------- */
 
@@ -490,6 +645,10 @@ section {
     border-radius: 4px;
     padding: 6px 22px;
     border: none;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+    0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
 }
     
 .portf-btn-f{ 
@@ -504,11 +663,21 @@ section {
     border-radius: 4px;
     padding: 6px 22px;
     border: none;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+    0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
 }
 
 .portf-btn:focus, .portf-btn:hover{
     color:var(--color-bg);
     background-color: var(--color-link);
+    
+}
+
+.portfolio-menu-list:focus, .portfolio-menu-list:hover{
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    background-color: #FFFFFF;
 }
     
 .portfolio-bg{
