--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,7 @@ section {
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
+    
 }
 
 .header-menu{
@@ -198,13 +199,17 @@ section {
     justify-content: center;
     align-items: center;
     margin-right: 10px;
-    color:var(--color-p-text)
+    fill:var(--color-p-text);
     
 }
 
    /* ------------------section-1 ------------------*/
 .sec-bg{
     background-color: var(--color-sect-bg);
+    max-width: 1600px;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
     text-align: center;
     padding-top: 200px;
     padding-bottom: 200px;
@@ -248,6 +253,20 @@ section {
    /*---------------------- details------------------- */
 .icon-menu{
     margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+    width: 270px;
+    height: 120px;
+    background: #F5F4FA;
+    border-radius: 4px;
+    
+}
+
+.icon-menu-list{
+    justify-content: center;
+    display: flex;
 }
 
    .menu-list{
@@ -352,26 +371,34 @@ section {
 .team-list{
     display: flex;
     margin-left: -30px;
+    box-sizing: border-box;
+    justify-content: center;
+    align-items: center;
     
 }
 
 .team-detail{
-    flex-basis: calc(100% / 4 - 30px);
-    margin-left: 30px;
-    border-radius: 0px 0px 4px 4px;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
-    0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+flex-basis: calc(100% / 4 - 30px);
+margin-left: 30px;
+background-color: #ffffff;
+box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+0px 1px 1px rgba(0, 0, 0, 0.14),
+0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 0px 0px 4px 4px;
 }
 
+
 .team-name{
-    padding: 30px;
-    background-color:#FFFFFF;
+  padding: 30px;
+  height: 162px;
+  background-color: #ffffff;
+ 
 }
 
 .social-icons{
   display: flex;
-  padding: 0 32px 20px;
+  justify-content: center;
+  margin-top: 16px;
         
 }
 
@@ -385,14 +412,13 @@ section {
 } 
 
 .soc-link{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color:inherit;
-  border-radius: 50%;
-  box-sizing: border-box;
+  display: block;
+  width: 44px;
   height: 44px;
-  width: 44px;   
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;  
 }
 
 .soc-link:hover, .soc-link:focus{
@@ -476,6 +502,10 @@ section {
 
 }
 
+.line{
+    align-items: baseline;
+}
+
 .footer-bg .container{
     display: flex;
 }
@@ -551,7 +581,7 @@ section {
 
 .footer-social-links{
   margin-left: 70px;
-  padding-top: 12px;
+
 
 }
 
@@ -595,6 +625,10 @@ section {
 
 .footer-links {
     margin-right: 10px;
+}
+
+.footer-links:last-child{
+    margin: 0px;
 }
 
 .footer-icon-list{
@@ -645,9 +679,6 @@ section {
     border-radius: 4px;
     padding: 6px 22px;
     border: none;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
-    0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
 }
     
@@ -663,21 +694,28 @@ section {
     border-radius: 4px;
     padding: 6px 22px;
     border: none;
+    border-radius: 4px;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
     0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 4px;
 }
 
 .portf-btn:focus, .portf-btn:hover{
     color:var(--color-bg);
     background-color: var(--color-link);
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+    0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
     
 }
 
-.portfolio-menu-list:focus, .portfolio-menu-list:hover{
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    background-color: #FFFFFF;
+
+.portfolio-menu-lists:focus,
+.portfolio-menu-lists:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+  0px 4px 4px rgba(0, 0, 0, 0.06),
+  1px 4px 6px rgba(0, 0, 0, 0.16);
+  display: block;
 }
     
 .portfolio-bg{
